--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ node_js:
 
 cache: npm
 
-env:
-  - $NOW_TOKEN=y21FXhM8D0bExKs9I01uMIr7
+# env:
+#   - $NOW_TOKEN=y21FXhM8D0bExKs9I01uMIr7
 
 before_install:
   - ls -la
